--- a/config/fedora.yml
+++ b/config/fedora.yml
@@ -1,7 +1,7 @@
 development:
   user: fedoraAdmin
   password: fedoraAdmin
-  url: http://127.0.0.1:8983/fedora/rest
+  url: http://127.0.0.1:8080/fcrepo-webapp-4.1.1/rest
   base_path: /dev
 test:
   user: fedoraAdmin
