--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,19 @@
 machine:
   ruby:
     version: 2.2.2
+  services:
+    - docker
+
+dependencies:
+  override:
+    - docker info
+    - docker build -t andrewkrug/fedora4 .
+    - docker build -t andrewkrug/solr .
+
+test:
+  override:
+    - docker run -d -p 8080:8080 andrewkrug/fedora4; sleep 10
+    - docker run -d -p 8081:8081 andrewkrug/solr; sleep 10
+    - curl --retry 10 --retry-delay 5 -v http://localhost:8080
+    - curl --retry 10 --retry-delay 5 -v http://localhost:8081
+    - rspec spec
