--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,8 @@ machine:
 dependencies:
   override:
     - docker info
+    - docker pull andrewkrug/fedora4
+    - docker pull andrewkrug/solr
     - docker build -t andrewkrug/fedora4 .
     - docker build -t andrewkrug/solr .
 
