--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,11 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter:   mysql2
+  encoding:  utf8
+  reconnect: true
+  database:  <%= ENV["DB"] %>
+  pool:      5
+  username:  <%= ENV["DB_USER"] %>
+  password:  <%= ENV["DB_PASSWORD"] %>
+  host:      <%= ENV["DB_HOST"] %>
