--- a/config/fedora.yml
+++ b/config/fedora.yml
@@ -9,7 +9,7 @@ test:
   url: http://127.0.0.1:8080/fcrepo-webapp-4.1.1/rest
   base_path: /test
 production:
-  user: fedoraAdmin
-  password: fedoraAdmin
-  url: http://127.0.0.1:8983/fedora/rest
+  user: <%= ENV["FEDORA_USER"] %>
+  password: <%= ENV["FEDORA_PASS"] %>
+  url: http://<%= ENV["FEDORA_HOST"] %>:<%= ENV["FEDORA_PORT"] %>/<%= ENV["FEDORA_URI"] %>/rest
   base_path: /prod
