--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@
 /vendor/engines/production_credits/spec/dummy/tmp/
 /vendor/engines/production_credits/spec/dummy/.sass-cache
 Gemfile.lock
+gems/
