--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,10 @@ dependencies:
     - docker info
     - docker pull andrewkrug/fedora4
     - docker pull joelferrier/solr
+  post:
+    - bundle install:
+        pwd:
+          vendor/engines/production_credits
 
 test:
   pre:
