Unwrap the long lines in CatalogController
General team consensus is that the longer lines are more readable.  We
could do some additional metaprogramming, but don’t want to deviate
from the generated content more than necessary.

Modify the hound configuration to ignore the line-length checking on
this file.

--- a/.ruby_style.yml
+++ b/.ruby_style.yml
@@ -511,6 +511,8 @@ Metrics/LineLength:
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#80-character-limits
   Enabled: true
   Max: 80
+  Exclude:
+  - app/controllers/catalog_controller.rb
   AllowURI: true
   URISchemes:
   - http
