--- a/circle.yml
+++ b/circle.yml
@@ -16,3 +16,7 @@ test:
     - ./bin/start-docker.sh; sleep 10
     - curl --retry 10 --retry-delay 5 -v http://localhost:8080
     - curl --retry 10 --retry-delay 5 -v http://localhost:8081
+
+deployment:
+  try:
+    - ./bin/deploy.sh
